HoW_S added microphone to polar plots, added some text 	new file:   HOW_S/MICS/CAD_C195.png 	modified:   HOW_S/MICS/Cardioid.png 	modified:   HOW_S/MICS/Figure_eight.png 	modified:   HOW_S/MICS/Omni.png 	modified:   HOW_S/MICS/OmniPractical.png 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -871,7 +871,7 @@ plot show the angle, in degrees, from which a sound may arrive.  The numbers bet
 that might be picked up relative to an on-axis arrival.  If you multiply this number 
 by 100 you get the percentage of sound that might be picked up relative to an on-axis 
 arrival.  The heavy (blue) circle around the outside indicates that an omnidirectional 
-microphone picks up sound <br>equally well from any angle.</i>
+microphone picks up sound equally well from any angle.</i>
 <small>Illustration by Prof. </small><span style="font-family:'Garamond'"
 >d<small><small>DB</small></small></span>.<br>
 <br><p>
@@ -910,14 +910,35 @@ are more common in a studio environment for recorded sound.  Omnidirectional mic
 in live-sound applications are mostly limited to lavalier and ear-set microphones where 
 their ability to be miniaturized matters.  <br><br>
 
+Omnidirectional microphones are also inherently superior to directional microphones of
+equivalent cost when uniformly accurate and smooth high-fidelity low-frequency response 
+is needed.  Pianos (the low notes extend down to 27 Hz), Pipe organs (some go down to 16 Hz), 
+bass violins, contrabassoons, and electric bass cabinets can sometimes benefit from using 
+an omnidirectional microphone because of the inherent low-frequency advantage of this
+design.  Not all omnidirectional microphones acheive such excellent low-frequency 
+response, so be sure to check the datasheet before purchasing.  However due to feedback 
+concerns in live-sound, omnidirectional microphones are not a common choice, even when 
+good low-frequency response is helpful.<br><br>    
+
 If omnidirectional microphones are used in live-sound reinforcement their ability to 
 pick up sound from all angles means they are more open to picking up feedback.  This is 
 a serious strike against the routine use of omnidirectional microphones in live-sound 
 reinforcement.  This disadvantage may be overcome by keeping the microphone very close
 to the sound source, which is exactly what ear-set and lavalier microphones do.  (Also, 
 whenever possible keep the mic behind the loudspeaker so that the directional pattern 
-of the loudspeaker directs amplified sound away from the microphone.) 
+of the loudspeaker directs amplified sound away from the microphone.)
 <br><br>
+
+Within the category of omnidirectional microphones there is a category of microphones 
+called "measurement" microphones or "reference" microphones.  These use standard XLR 
+connections and look like any microphone, and superficially they act like any 
+microphone.  But they are optimized for use with spectrum analyzers for scientific 
+laboratory work, not audio mixing boards.  It is not impossible to use this type of 
+microphone in a house-of-worship application, but it is unlikely to be your best choice 
+for the money in this application.  Many of them have restricted dynamic range.  They 
+overload easily and the might have higher background noise than a normal microphone.  
+What they do have is ultra-flat frequency response.  It is usually best not to order 
+one of these for live-sound reinforcement.<br><br>  
 
 <!--<img src="Figure_eight_logo.png"><i><b>Figure-of-eight</i></b><br>
 Before discussing cardiod and super-cardiod microphones, consider Figure-eight microphones.  
