Published solutions EGR 323 PS#8 and a few typos fixed in HoW_S 	new file:   HOW_S/MICS/mic_polar.m 	modified:   HOW_S/MICS/mic_types.html 	modified:   S21/323/323S21PS.HTM

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -936,7 +936,7 @@ microphone.  But they are optimized for use with spectrum analyzers for scientif
 laboratory work, not audio mixing boards.  It is not impossible to use this type of 
 microphone in a house-of-worship application, but it is unlikely to be your best choice 
 for the money in this application.  Many of them have restricted dynamic range.  They 
-overload easily and the might have higher background noise than a normal microphone.  
+overload easily and they might have higher background noise than a normal microphone.  
 What they do have is ultra-flat frequency response.  It is usually best not to order 
 one of these for live-sound reinforcement.<br><br>  
 
