--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/22/2021 8:34 am)
+                              >(Last update: 3/22/2021 4:55 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -89,9 +89,9 @@ PS                                                           <BR>
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
         3/19
    <!-- Due -->             </TD><TD align="center" valign="top">
-        3/26<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/31694406"
-		>3/12</a>
+        <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31870319"
+		>3/26</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
         "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
