--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/26/2021 7:34 pm)
+                              >(Last update: 3/26/2021 8:17 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -123,7 +123,19 @@ PS                                                           <BR>
 		Review: Ch. 10, Section 10.3                   <br>&nbsp;
         Read: &nbsp; Ch. 10, Section 10.4, 10.5, 10.6  <BR>&nbsp;
 		                                               <br>&nbsp;
-        Do <DO>+10.48, +10.50, 10.65, +10.69, 10.71, 10.72</DO>
+        Do <DO>+10.48, +10.50, 10.65, +10.69, 10.71, 10.72</DO><br>&nbsp;
+		                                               <br>&nbsp;
+        Note clarification to Section <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P703_A"
+		                       >10.3</a>               <br>&nbsp;
+        Note errata for the answer to Problem <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#L11_10P48"
+		                       >10.48</a>               <br>&nbsp;
+        Note errata for Problem <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P771_10P50"
+		                       >10.50</a>               <br>&nbsp;<small>
+		(The three links above were added on 3/26.)</small>
+		
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  8
