--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -433,6 +433,19 @@ Page 731, Figure 10.26 (a).</b><br>
    Wikipedia page on <a href="https://en.wikipedia.org/wiki/Parallel_(operator)"
    >Parallel (operator)</a> <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
    <i>(Posted 7/23/2020)</i></small></blockquote>
+   
+                                          <A NAME="P771_10P50"></A><b>
+Page 771, Problem 10.50.</b><br>
+   Replace the phrase "low-frequency gain" with the phrase<br>
+   "mid-frequency gain."<br><small><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+   
+   It happens that the low-frequency transfer function, 
+   <i>F<sub>L</sub></i>(<i>s</i>) = 1 in this instance.<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+   Thus, <i>F<sub>L</sub></i>(<i>s</i>)<i>A<sub>M</sub></i> = <i>A<sub>M</sub></i>, 
+   but since <i>A<sub>M</sub></i> is what is wanted, that is what<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+   should be requested.</small><br>
+	  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+      <small><i>(Posted 3/26/2021)           </i></small><br><br>
      
                                            <A NAME="L4_92"></A><b>
 Appendix L, Page L-3, Answer to Problem 2.92.</b><br>
