Added information about figure-of-eight microphones to HoW_Sound 	new file:   HOW_S/MICS/Fibure_8_1.png 	new file:   HOW_S/MICS/Fibure_8_1.xcf 	new file:   HOW_S/MICS/Fibure_8_2.xcf 	new file:   HOW_S/MICS/Figure_8_1.png 	new file:   HOW_S/MICS/Figure_8_2.png 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -940,10 +940,111 @@ overload easily and they might have higher background noise than a normal microp
 What they do have is ultra-flat frequency response.  It is usually best not to order 
 one of these for live-sound reinforcement.<br><br>  
 
-<!--<img src="Figure_eight_logo.png"><i><b>Figure-of-eight</i></b><br>
-Before discussing cardiod and super-cardiod microphones, consider Figure-eight microphones.  
-In a sense, this type of microphone is exactly the other end of the directionality 
-sp-->
+<img src="Figure_eight_logo.png"><i><b>Figure-of-eight</i></b><br>
+Before discussing cardioid and super-cardioid microphones, I direct your attention to 
+<i>figure of eight</i> microphones (Also known as <i>figure eight</i> or <i>figure 8</i> 
+microphones.)  In a sense, this type of microphone is exactly the other end of the 
+directionality spectrum.  It is the <i>most</i> directional microphone.  It accepts 
+sounds arriving on-axis (from the front or rear) and rejects completely sounds 
+arriving exactly off-axis (from any radial angle that is perpendicular to the axis.  
+Whereas an omnidirectional microphone is sensitive to air-pressure changes at a point, 
+a figure-of-eight microphone is sensitive to the velocity (speed AND direction) of 
+the air molecules as the move in the sound-wave.  If the air is moving in the direction
+of the cartridge's axis, the motion results in a signal.  If the motion of the air is 
+perpendicular to the axis, no signal is produced.  One way to achieve this is to leave
+the back side of a diaphragm as equally open to the air as the front side.<br><br>
+
+<p align="center"><img src="Figure_8_1.png"><br>
+<i>Above:  The arrow shows the direction of sound waves.<br>
+The blue area represents the capsule of a figure-of-eight microphone.  
+As the air-molecules move against the diaphragm (thin red line) the 
+diaphragm follows their motion, creating a signal.</i>
+<small>Illustration by Prof. </small><span style="font-family:'Garamond'"
+>d<small><small>DB</small></small></span>.<br>
+<br><p>
+
+<p align="center"><img src="Figure_8_2.png"><br>
+<i>Above:  The direction of the sound matters.  If the sound arrives 
+perpendicular to the axis of the capsule, as shown, then it creates no 
+motion of the diaphragm, and there is no signal.</i>
+<small>Illustration by Prof. </small><span style="font-family:'Garamond'"
+>d<small><small>DB</small></small></span>.<br>
+<br><p>
+
+Directional microphones, and especially Figure-of-eight microphones 
+are sensitive to wind and especially the turbulence of any breeze that
+might flow past the capsule.  This makes them especially sensitive to 
+plosives such as "b," "p,", "s," and "t" in speech.  These microphones 
+will emphasize these sounds if the microphone is close enough to the 
+source.  The effect starts to become noticeable with in a foot or so 
+of the person speaking, and can become obnoxious if the microphone is 
+very close and has no windscreen.  For speech and vocal reinforcement 
+wind screening becomes essential with these microphones.<br><br>
+
+The directional pattern of a figure-of-eight microphone is shown below.
+Notice that the sound is equally well received from the rear as well 
+as from the front, but at an angle perpendicular to the axis the microphone
+is totally insensitive.<br><br>
+
+<p align="center"><img src="Figure_eight.png"><br>
+<i>Above:  The ideal figure-of-eight pattern.  The numbers around the outside of the 
+plot show the angle, in degrees, from which a sound may arrive.  The numbers between 
+0 and 1 on the radius to the right of 90 degrees label the fractional amount of sound 
+that might be picked up relative to an on-axis arrival.  If you multiply this number 
+by 100 you get the percentage of sound that might be picked up relative to an on-axis 
+arrival.  Maximum rejection of sound is at angles perpendicular to the axis of 
+the microphone.</i>
+<small>Illustration by Prof. </small><span style="font-family:'Garamond'"
+>d<small><small>DB</small></small></span>.<br>
+<br><p>
+
+Figure-of-eight microphones, when placed very close to a source of sound (usually 
+within one foot) give exaggerated bass (low frequency) response.  This is called 
+the <i>proximity effect</i>.  It is caused by the curvature of the sound waves 
+near the source.  As the waves radiate outward from the source the circumference of each 
+wave-front increases resulting in weaker pressure differentials (weaker sound).  
+Thus in a figure-of-eight microphone the sound at the side opposite of the arrival 
+of the sound is just a little bit weaker than the sound at the front.  Much of this
+difference depends on the size and geometry of the microphone capsule, the diaphragm, 
+and the structural elements (which may block some sound waves) required to support 
+the diaphragm.  Thus some microphones have larger proximity effects for a given 
+distance to the sound-source than others.   Of all the directional microphone 
+designs, figure-or-eight microphones display the strongest proximity effects.  
+Omnidirectional microphones are completely free of the proximity effect because they
+sample the sound at a single point.  Click here for a <a 
+href="https://www.neumann.com/homestudio/en/what-is-the-proximity-effect">demonstration of proximity effect</a>.  
+(Good headphones or ear-buds with good low-frequency response will help you hear the 
+demonstration accurately.)  One may also note that directional microphones eliminate 
+room resonances from the sound, mainly because room resonances arrive from all 
+directions, making an omnidirectional microphone especially sensitive to them.<br><br>
+
+Figure-of-eight microphones are essentially sensitive to the velocity of the moving 
+air molecules in a longitudinal sound-wave.  In contrast, an omnidirectional 
+microphone is essentially sensitive to the pressure variations (density of air 
+molecules) in a sound wave.  Recall the <a href=
+"https://www.acs.psu.edu/drussell/Demos/waves/wavemotion.html">animation</a> 
+which shows the two different aspects of a longitudinal sound wave.  In this 
+animation a figure-of-eight microphone is sensitive to the motion of the "particle" 
+and an omnidirectional microphone is sensitive to the "wave."  Thus, an 
+omnidirectional microphone is said to be responsive to <i>pressure</i> and a 
+figure-of-eight microphone is sensitive to velocity.  (Velocity sensitivity 
+is also known as <i>pressure gradient</i> sensitivity.)<br><br>
+
+<!--To illustrate that omnidirectional microphones and figure-of-eight microphones 
+are in a sense opposites of each other condider the mathematics of their 
+directional patterns.  Let 0 &leq; <i>x</i> &leq; 1 be a real number that 
+represents the directionality of a microphone.  If <i>x</i>&nbsp;=&nbsp;0 
+then the microphone has zero directionality.  It is omnidirectional.  On the 
+other hand, if <i>x</i>&nbsp;=&nbsp;1 then the microphone has maximum 
+directionality.  It is then a figure-of-eight microphone.  Then the mathematical
+formula for the directional pattern is -->
+
+  
+
+
+
+
+
 
 
 
