--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -942,14 +942,14 @@ one of these for live-sound reinforcement.<br><br>
 
 <img src="Figure_eight_logo.png"><i><b>Figure-of-eight</i></b><br>
 Before discussing cardioid and super-cardioid microphones, I direct your attention to 
-<i>figure of eight</i> microphones (Also known as <i>figure eight</i> or <i>figure 8</i> 
-microphones.)  In a sense, this type of microphone is exactly the other end of the 
+<i>figure of eight</i> microphones. (Also known as <i>figure eight</i> or <i>figure 8</i> 
+or <i>bidirectional</i> microphones.)  In a sense, this type of microphone is exactly the other end of the 
 directionality spectrum.  It is the <i>most</i> directional microphone.  It accepts 
 sounds arriving on-axis (from the front or rear) and rejects completely sounds 
 arriving exactly off-axis (from any radial angle that is perpendicular to the axis.  
 Whereas an omnidirectional microphone is sensitive to air-pressure changes at a point, 
 a figure-of-eight microphone is sensitive to the velocity (speed AND direction) of 
-the air molecules as the move in the sound-wave.  If the air is moving in the direction
+the air molecules as they move in the sound-wave.  If the air is moving in the direction
 of the cartridge's axis, the motion results in a signal.  If the motion of the air is 
 perpendicular to the axis, no signal is produced.  One way to achieve this is to leave
 the back side of a diaphragm as equally open to the air as the front side.<br><br>
@@ -998,36 +998,59 @@ the microphone.</i>
 >d<small><small>DB</small></small></span>.<br>
 <br><p>
 
-Figure-of-eight microphones, when placed very close to a source of sound (usually 
-within one foot) give exaggerated bass (low frequency) response.  This is called 
-the <i>proximity effect</i>.  It is caused by the curvature of the sound waves 
-near the source.  As the waves radiate outward from the source the circumference of each 
-wave-front increases resulting in weaker pressure differentials (weaker sound).  
-Thus in a figure-of-eight microphone the sound at the side opposite of the arrival 
-of the sound is just a little bit weaker than the sound at the front.  Much of this
-difference depends on the size and geometry of the microphone capsule, the diaphragm, 
-and the structural elements (which may block some sound waves) required to support 
-the diaphragm.  Thus some microphones have larger proximity effects for a given 
-distance to the sound-source than others.   Of all the directional microphone 
-designs, figure-or-eight microphones display the strongest proximity effects.  
-Omnidirectional microphones are completely free of the proximity effect because they
-sample the sound at a single point.  Click here for a <a 
-href="https://www.neumann.com/homestudio/en/what-is-the-proximity-effect">demonstration of proximity effect</a>.  
-(Good headphones or ear-buds with good low-frequency response will help you hear the 
-demonstration accurately.)  One may also note that directional microphones eliminate 
-room resonances from the sound, mainly because room resonances arrive from all 
-directions, making an omnidirectional microphone especially sensitive to them.<br><br>
-
-Figure-of-eight microphones are essentially sensitive to the velocity of the moving 
-air molecules in a longitudinal sound-wave.  In contrast, an omnidirectional 
-microphone is essentially sensitive to the pressure variations (density of air 
+Figure-of-eight microphones are essentially sensitive to the <i>velocity</i> of the moving 
+air molecules in a longitudinal sound wave.  In contrast, an omnidirectional 
+microphone is essentially sensitive to the <i>pressure</i> variations (density of air 
 molecules) in a sound wave.  Recall the <a href=
 "https://www.acs.psu.edu/drussell/Demos/waves/wavemotion.html">animation</a> 
 which shows the two different aspects of a longitudinal sound wave.  In this 
 animation a figure-of-eight microphone is sensitive to the motion of the "particle" 
 and an omnidirectional microphone is sensitive to the "wave."  Thus, an 
 omnidirectional microphone is said to be responsive to <i>pressure</i> and a 
-figure-of-eight microphone is sensitive to velocity.  (Velocity sensitivity 
+figure-of-eight microphone is sensitive to <i>velocity</i>.  (Velocity sensitivity 
+is also known as <i>pressure gradient</i> sensitivity.)<br><br>
+
+Figure-of-eight microphones, when placed very close to a source of sound (usually 
+within one foot or closer) give exaggerated bass (low frequency) response.  This is called 
+the <i>proximity effect</i>.  It is caused by the curvature of the sound waves 
+near the source.  As the waves radiate outward from the source the circumference of each 
+wave-front increases resulting in weaker pressure differentials (weaker sound) being 
+associated with the further wavefronts.  
+Thus, in a figure-of-eight microphone the sound at the side opposite of the arrival 
+of the sound is just a little bit weaker than the sound at the front.  Some of this
+difference depends on the size and geometry of the microphone capsule, the diaphragm, 
+and the structural elements (which may block some sound waves) required to support 
+the diaphragm.  Some microphones have larger proximity effects for a given 
+distance to the sound-source than others.   Weaker sound at the back of the 
+diaphragm adds pressure differential, enhancing the sensitivity of the microphone.  
+However, as the frequency of the sound gets lower its wavelength gets longer which 
+means that the curvature of low-frequency sound waves enhances their pressure gradient 
+more than for higher-frequency sound waves.  This makes proximity effect inherent 
+in any velocity-sensitive microphone.  (Mathematically, a gradient is a directional 
+derivative.  Velocity is the gradient of position.  In air, a pressure gradient is 
+proportional to velocity.)  Fundamentally, some proximity 
+effect will always be inherent to achieving directionality.<br><br>
+
+Of all the directional microphone designs, figure-of-eight microphones display the 
+strongest proximity effects.  Only omnidirectional microphones are completely free 
+of the proximity effect because they sample the sound at a single point.  Click here 
+for a <a href="https://www.neumann.com/homestudio/en/what-is-the-proximity-effect"
+>demonstration of proximity effect</a>.  (Headphones or earbuds with good low-frequency 
+response will help you hear the demonstration accurately.)  One may also note that 
+directional microphones eliminate most room resonances from the sound, mainly because 
+room resonances arrive from all directions, making an omnidirectional microphone 
+especially sensitive to them.<br><br>
+
+Figure-of-eight microphones are essentially sensitive to the <i>velocity</i> of the moving 
+air molecules in a longitudinal sound wave.  In contrast, an omnidirectional 
+microphone is essentially sensitive to the <i>pressure</i> variations (density of air 
+molecules) in a sound wave.  Recall the <a href=
+"https://www.acs.psu.edu/drussell/Demos/waves/wavemotion.html">animation</a> 
+which shows the two different aspects of a longitudinal sound wave.  In this 
+animation a figure-of-eight microphone is sensitive to the motion of the "particle" 
+and an omnidirectional microphone is sensitive to the "wave."  Thus, an 
+omnidirectional microphone is said to be responsive to <i>pressure</i> and a 
+figure-of-eight microphone is sensitive to <i>velocity</i>.  (Velocity sensitivity 
 is also known as <i>pressure gradient</i> sensitivity.)<br><br>
 
 <!--To illustrate that omnidirectional microphones and figure-of-eight microphones 
