--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/26/2021 8:17 pm)
+                              >(Last update: 3/29/2021 3:57 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -89,9 +89,9 @@ PS                                                           <BR>
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
         3/26
    <!-- Due -->             </TD><TD align="center" valign="top">
-        4/09<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/31870319"
-		>3/26</a>
+        <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31966221"
+		>4/09</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
         "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
@@ -114,9 +114,9 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/3110075/assignments/31870319"
 		>3/26</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
-        >1/30</a>
+		<a href=
+        "https://dordt.instructure.com/files/204052839/download?download_frd=1"
+        >3/29</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Open Circuit Time Const. <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 		        Hi-freq response of cascode, CS, diff amps<br>&nbsp;
