Fixed a minor typo on my home page   modified:   index.html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <a name="Courses"></a><br>
 <H1>Courses</H1>
 
-<p>In the Spring of 2021 Prof. De Boer am teaching one course: </p>
+<p>In the Spring of 2021 Prof. De Boer is teaching one course: </p>
 
 <Blockquote><font face="verdana" size="2">
 <!--EGR 323 with lab-->
