Published slides and videos for Monday and Friday (today) for EGR 323 	modified:   S21/323/323S21DN.HTM

--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -278,21 +278,21 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Probs 10.50, 10.72; Hi freq and degeneration, low freq. response<!--end comment--></td>  
    </TR><!-- Week of 3/28 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  3/29<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/204464649/download?download_frd=1"><!-- -->
+	  3/29<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      3/31<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      4/02<!-- --</a><!-- --></td>
+      3/31<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/204464680/download?download_frd=1"><!-- -->
+      4/02<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Do26ZnJB5Tk">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=WsLm9wu8Z3g">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment--><b>Ch. 11</b> Intro to feedback; loop gain, closed loop gain defined; 4 adv.<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Test #2.</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->4 types of feedback; finding <i>A</I> from <i>A&beta;</i> and <i>&beta;</i>; Good Friday <!--end comment--></td>  
    </TR><!-- Week of 4/04 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
