Just forcing a cache update 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 <a href="https://dfdeboer.github.io/temp/CovenantCRC/Handbell_Choir_Accompaniment.htm">here</a>
 <a href="https://dfdeboer.github.io/HoW_S.html">here</a>
 <a href="https://dfdeboer.github.io/temp/Three-isms.pdf">here</a>
-junk to bk cache<br>
+junk <br>
 </div>
 </TABLE>
 </BODY>
