--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/29/2021 3:57 pm)
+                              >(Last update: 4/09/2021 7:59 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,25 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 11
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        4/09
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        4/18<!--<a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31966221"
+		>4/18</a>
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
+        >1/30</a>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Advantages of feedback                 <br>&nbsp;
+		Review Sections 11.1, 11.2                    <br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+		                                               <br>&nbsp;
+        Do <DO>+11.19, D11.17, *11.23</DO>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  10
