Published solutins to 323PS#10 and turn-in link for 323PS#11 	modified:   S21/323/323S21PS.HTM

--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/09/2021 8:08 pm)
+                              >(Last update: 4/12/2021 10:56 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -89,9 +89,9 @@ PS                                                           <BR>
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
         4/09
    <!-- Due -->             </TD><TD align="center" valign="top">
-        4/16<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/31966221"
-		>4/18</a>
+        <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/32074785"
+		>4/16</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
         "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
@@ -112,9 +112,9 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/3110075/assignments/31966221"
 		>4/09</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
-        >1/30</a>
+		<a href=
+        "https://dordt.instructure.com/files/205380147/download?download_frd=1"
+        >4/12</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Hi-freq response of cascode, CS, diff amps<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 		        low-frequency responses, Adv of feedback<br>&nbsp;
