published slides and video of 323 for today, included a few edits to photos in HoW_S 	modified:   HOW_S/MICS/Cardioid_3.png 	modified:   HOW_S/MICS/Super_cardioid.png 	modified:   S21/323/323S21DN.HTM

--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -312,19 +312,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Problem 10.89; Effect of feedback on pole location, root locus concept.<!--end comment--></td>  
    </TR><!-- Week of 4/11 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  4/12<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/205417037/download?download_frd=1"><!-- -->
+	  4/12<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
       4/14<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
       4/16<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=I-OkHqm48jc">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Thoughts: Hez 11:4-5, overview PS#11, gain and phase margin<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Lab report due.</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 4/18 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
