Added a missing link so that today's video is actually available. 	modified:   S21/323/323S21DN.HTM

--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -322,7 +322,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=I-OkHqm48jc">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=G32iUA5Pk9U">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=V836oRdHORs">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Thoughts: Hez 11:4-5, overview PS#11, gain and phase margin<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Why 45&deg; or 60&deg; phase margin? Bode plots of |<i>A</i>(<i>s</i>)| &nbsp; <font color=grey>Lab report due.</font><!--end comment--><br>
