--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/16/2021 3:44 pm)
+                              >(Last update: 4/19/2021 9:06 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -89,12 +89,12 @@ PS                                                           <BR>
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
         4/16
    <!-- Due -->             </TD><TD align="center" valign="top">
-        4/23<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/31966221"
-		>4/18</a>
+        <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/32131362"
+		>4/23</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
+        "https://dordt.instructure.com/files/xxxxxxxxxxx/download?download_frd=1"
         >1/30</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Effects of feedback on stability       <br>&nbsp;
@@ -113,9 +113,9 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/3110075/assignments/32074785"
 		>4/16</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
-        >1/30</a>
+		<a href=
+        "https://dordt.instructure.com/files/206047621/download?download_frd=1"
+        >4/19</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Advantages of feedback                 <br>&nbsp;
 		Review Sections 11.1, 11.2                    <br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
