Publised 323PS#13 and clarification to Figure 12.1 in Sedra Smith 8e

--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -878,6 +878,23 @@ Page 703, Section 10.3, The Method of Open-Circuit Time Constants</b><br>
    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
    <small><i>(Posted 3/26/2021)           </i></small><br><br>
    
+                                             <A NAME="P891"></A><b>
+Page 891, Figure 12.3.</b><br>
+   In the textbook's illustration, transistor 
+   <i>Q</i><sub>3</sub> is shown using the symbol 
+   for a diode.  This is an industry shorthand.  Actually, 
+   Transistor <i>Q</i><sub>3</sub> is identical to transistor 
+   <i>Q</i><sub>2</sub> except that it is diode-connected.  
+   Figure 12.3(expanded) shown below detials the way the three 
+   transistors shown in the textbook's Figure are actually 
+   connected.<br><br>
+   <img src="SS8e_Prob12p1.png"><br>
+   <small><font face="Arial"><b><font color="#2aa9cc">Figure 12.1</font></b>(expanded)</font></small>
+   An emitter follower (<i>Q</i><sub>1</sub>) biased <br>
+   with a constant current <i>I</i> supplied by current mirror <i>Q</i><sub>2</sub>-<i>Q</i><sub>3</sub>.<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 4/20/2021)</small></i><br><br>
+   
    
    
    
