--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/19/2021 9:06 am)
+                              >(Last update: 4/20/2021 3:09 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,30 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 13
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        4/21
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        4/30<!--<a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31966221"
+		>4/30</a>
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
+        >5/03</a>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Power amplifiers, class A, AB, B       <br>&nbsp;
+		Read: Chapter 12, Sections 12.1 through 12.5   <br>&nbsp;
+		                                               <br>&nbsp;
+        Do <DO>12.1, +D12.14, +D12.20, +*12.41 part (a) only.</DO>
+		                                      <br>&nbsp;<br>&nbsp;
+		Note clarification to <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P891"
+		                    >Figure 12.1</a>
+
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  12
