--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -334,17 +334,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/206137385/download?download_frd=1"><!-- -->
 	  4/19<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/206367400/download?download_frd=1"><!-- -->
-      4/21<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      4/23<!-- --</a><!-- --></td>
+      4/21<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/206583433/download?download_frd=1"><!-- -->
+      4/23<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=fIJyjTidzjA">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=L-eAgvLZ8Bw">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=UwVEIvlqcWo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Circuit topologies for classes A &ndash; H, Dynamic range and eff. of class A<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Power dissipation and efficiency of class AB, biasing goals for class AB<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Prob. 11.83, methods of class AB Bias, <b>Ch 13</b> Intro., pwr strg analogy <!--end comment--></td>  
    </TR><!-- Week of 4/25 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
