--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/20/2021 3:09 pm)
+                              >(Last update: 4/28/2021 9:57 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -104,8 +104,15 @@ PS                                                           <BR>
 		                                      <br>&nbsp;<br>&nbsp;
 		Note clarification to <a href=
         "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P891"
-		                    >Figure 12.1</a>
-
+		                    >Figure 12.1</a>            <br>&nbsp;
+							                            <br>&nbsp;
+		Please fill out two course evaluations:         <br>&nbsp;
+		Engineering Dept. "<a href=
+		"https://forms.office.com/r/E71QF1NNSW"
+		                 >Student Response Survey</a>"  <br>&nbsp;
+		Course Evaluation from "<a href=
+		"https://dordt.campuslabs.com/eval-home/cei/direct/_egr/_323/_1"
+		>Campus Labs</a>."
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  12
