Posted slides and video for today's 323 class  Changes to be committed:

--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -349,19 +349,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/206834109/download?download_frd=1"><!-- -->
-	  4/26<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      4/28<!-- --</a><!-- --><br><!-- --<a href=
+	  4/26<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/207077568/download?download_frd=1"><!-- -->
+      4/28<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
       4/30<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=6mWogwz0NbQ">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=0mxoB_Kgqo4">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Prob. 12.41, early op-amps, CMOS op-amps<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Last day of class.  "Assessment Activity"</font><!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment-->Prob. 12.20, CMOS op-amp annotated, 741 op amp schematic<!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Last day of class.  "Assessment Activity" (no slides or video)</font><!--end comment--></td>  
   </TR><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -End of table --- -->
 </TABLE></p>
 </BODY>
